--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>fun</title>
 </head>
 <body>
-    <form id="fun" action="http://127.0.0.1:8080/" method="POST">
+    <form id="fun" action="http://127.0.0.1:8080/transfer" method="POST">
         <input type="hidden" name="user_to" value="mitch">
         <input type="hidden" name="amount" value="1000">
     </form>
