--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><script>alert("zz")</script></title>
+    <title><script>alert("aA")</script></title>
     <script>
-        document.title = <script>alert(1)</script>;
+        document.title = <script>alert(1)</script></script>;
     </script>
 </head>
 <body>
-    <h1>>This must Workz</h1>
+    <h1>>Twork </h1>
 </body>
 </html>
