--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><script>alert("aA")</script></title>
     <script>
-        document.title = <script>alert(1)</script></script>;
+        document.title = '<script>alert(1)<\/script>';
     </script>
 </head>
 <body>
-    <h1>>Twork </h1>
+    <h1>Twork</h1>
 </body>
 </html>
