--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><script>alert("aA")</script></title>
     <script>
-        document.title = '<script>alert(1)<\/script>';
+        document.title = '<img src="" onerror="alert(1)">';
     </script>
 </head>
 <body>
